# ot-harjoitusty-

./: .gitignore  README.md  pyproject.toml  tasks.py
budgeting-app/: pyproject.toml
budgeting-app/dokumentaatio/: vaatimusmaarittely.md
data/: test-database.sqlite
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/test/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl-sekvenssikaavio.md  monopoli.md
src/: config.py  database_connection.py  index.py  initialize_database.py
src/entities/: budget.py  user.py
src/repositories/: budget_repository.py  user_repository.py
src/services/: budget_service.py  user_service.py
src/tests/: conftest.py  test_budget.py  test_budget_repository.py  test_budget_service.py  test_date_utils.py  test_integration.py  test_password_utils.py  test_user_repository.py  test_user_service.py
src/ui/: budget_details_view.py  budget_main_view.py  build_graph.py  build_pie_chart.py  login_view.py  register_view.py  ui.py
src/utils/: date_utils.py  password_utils.py
